Deleted NavBar Aligned the choice box correctly

--- a/client/src/component/Menu.less
+++ b/client/src/component/Menu.less
@@ -9,15 +9,20 @@
   opacity: 0;
   background-color: white;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  width: 101%;
+  height: 101%;
+  top: -0.5%;
+  left: -0.5%;
 }
 
 .Underneath:hover {
   opacity: 100;
 }
+
+.Link {
+  width: 50%;
+}
+
 .Choice {
   margin: 2% 2% 2% 2%;
   width: 96%;
@@ -34,9 +39,14 @@
 
 .Row {
   height: 100%;
+  width: 100%;
 }
 
 .Centered {
   display: flex;
   justify-content: center;
+}
+
+#ant-card-body {
+  height: 100vh;
 }
